--- a/src/views/SceneTimeline.module.css
+++ b/src/views/SceneTimeline.module.css
@@ -12,6 +12,7 @@
   right: 0;
   height: auto;
   width: 250px;
+  z-index: var(--z-index-view);
 }
 
 .turnSection {
